--- a/style.css
+++ b/style.css
@@ -19,3 +19,28 @@ h1{
 .form-group{
   margin: 20px 0;
 }
+label{
+  display: block;
+  margin-bottom: 5px;
+  color: #35495e;
+}
+input[type="file"], textarea{
+  width: 100%;
+  padding: 10px;
+  bottom: 1px solid #ccc;
+  border-radius: 5px;
+}
+button{
+  display: block;
+  background-color: #35495e;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  width: 100%;
+  font-size: 16px;
+}
+button:hover{
+  background-color: #293a4c;
+}
