--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ label{
 input[type="file"], textarea{
   width: 100%;
   padding: 10px;
-  bottom: 1px solid #ccc;
+  border: 1px solid #ccc;
   border-radius: 5px;
 }
 button{
