--- a/style.css
+++ b/style.css
@@ -45,3 +45,44 @@ button:hover{
   background-color: #293a4c;
 }
 
+#loaderDiv{
+  position: fixed;
+  inset: 0;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  gap: 0.5rem;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0,0,0,0.1);
+  color: #2c2b2b;
+}
+#loaderDiv label{
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+
+.hidden{
+  display: none !important;
+}
+
+.loader {
+  width: 48px;
+  height: 48px;
+  border: 5px solid #2c2b2b;
+  border-bottom-color: transparent;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+  }
+
+  @keyframes rotation {
+  0% {
+      transform: rotate(0deg);
+  }
+  100% {
+      transform: rotate(360deg);
+  }
+  } 
